@@ -5,12 +5,8 @@ import DateBase.DateBase;
 import model.Patient;
 import model.Hospital;
 
-import java.util.Comparator;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 public class PatientDaoImpl implements IPatient {
     private DateBase dateBase;
@@ -21,43 +17,65 @@ public class PatientDaoImpl implements IPatient {
 
     @Override
     public String addPatientsToHospital(Long id, List<Patient> patients) {
-        Optional<Hospital> hospitalOptional = dateBase.getHospitals().stream()
-                .filter(h -> h.getId().equals(id))
-                .findFirst();
-        if (hospitalOptional.isPresent()) {
-            Hospital hospital = hospitalOptional.get();
-            hospital.getPatients().addAll(patients);
-            return patients.toString();
-        } else {
-            return "Больница с указанным ID не найдена.";
+        try {
+            Optional<Hospital> hospitalOptional = dateBase.getHospitals().stream()
+                    .filter(h -> h.getId().equals(id))
+                    .findFirst();
+            if (hospitalOptional.isPresent()) {
+                Hospital hospital = hospitalOptional.get();
+                hospital.getPatients().addAll(patients);
+                return patients.toString();
+            } else {
+                return "Больница с указанным ID не найдена.";
+            }
+        } catch (Exception e) {
+            e.printStackTrace(); // Handle the exception appropriately, e.g., log it or throw a custom exception.
+            return "Failed to add patients to hospital"; // Return an error message or handle the error as needed.
         }
     }
 
     @Override
     public Patient getPatientById(Long id) {
-        return dateBase.getHospitals().stream()
-                .flatMap(hospital -> hospital.getPatients().stream())
-                .filter(patient -> patient.getId().equals(id))
-                .findFirst()
-                .orElse(null);
+        try {
+            return dateBase.getHospitals().stream()
+                    .flatMap(hospital -> hospital.getPatients().stream())
+                    .filter(patient -> patient.getId().equals(id))
+                    .findFirst()
+                    .orElse(null);
+        } catch (Exception e) {
+            e.printStackTrace(); // Handle the exception appropriately, e.g., log it or throw a custom exception.
+            return null; // Return null or handle the error as needed.
+        }
     }
 
     @Override
-    public Map<Integer, Patient> getPatientByAge() {
-        Optional<Patient> patientOptional = dateBase.getHospitals().stream().flatMap(hospital -> hospital.getPatients().stream()).findFirst();
-        return patientOptional.map(patient -> Map.of(patient.getAge(), patient))
-                .orElse(Map.of());
+    public Map<Integer, List<Patient>> getPatientByAge() {
+        try {
+            List<Patient> allPatients = dateBase.getHospitals().stream()
+                    .flatMap(hospital -> hospital.getPatients().stream())
+                    .collect(Collectors.toList());
+
+            return allPatients.stream().collect(Collectors.groupingBy(Patient::getAge));
+        } catch (Exception e) {
+            e.printStackTrace();
+            return Collections.emptyMap();
+        }
     }
 
     @Override
     public List<Patient> sortPatientsByAge(String ascOrDesc) {
-        Comparator<Patient>ageComparator =Comparator.comparingInt(Patient::getAge);
-        if ("desc".equalsIgnoreCase(ascOrDesc)) {
-            ageComparator = ageComparator.reversed();
+        try {
+            Comparator<Patient> ageComparator = Comparator.comparingInt(Patient::getAge);
+            if ("desc".equalsIgnoreCase(ascOrDesc)) {
+                ageComparator = ageComparator.reversed();
+            }
+            return dateBase.getHospitals().stream()
+                    .flatMap(hospital -> hospital.getPatients().stream())
+                    .sorted(ageComparator)
+                    .collect(Collectors.toList());
+        } catch (Exception e) {
+            e.printStackTrace();
+            return new ArrayList<>();
         }
-        return dateBase.getHospitals().stream()
-                .flatMap(hospital -> hospital.getPatients().stream())
-                .sorted(ageComparator)
-                .collect(Collectors.toList());
     }
 }
